--- a/static/shooter-poc.html
+++ b/static/shooter-poc.html
@@ -12,7 +12,28 @@
             var goodTarget = null;
             var badTarget = null;
             var spacebar = null;
+            var zKey = null;
             var crosshairs = null;
+            var hasHitBadTarget = false;
+            var hasHitGoodTarget = false;
+            var score = 0;
+            var scoreText = null;
+            var messageText = null;
+            var popInEmitter = null;
+            var startGoodTargetTimedEvent = null;
+            var startBadTargetTimedEvent = null;
+
+            var goodTargetPositions = [
+                {x: 70, y: 320}, //Bush 1
+                {x: 700, y: 320}, //Bush 2
+                {x: 400, y: 370} //Bush 3
+                ];
+
+            var badTargetPositions = [
+                {x: 70, y: 350}, //Bush 1
+                {x: 700, y: 350}, //Bush 2
+                {x: 400, y: 400} //Bush 3
+                ]
 
 
             var Shooter = new Phaser.Class({
@@ -42,6 +63,28 @@
                     background.setDisplaySize(800, 600);
                     background.setOrigin(0, 0);
 
+                    scoreText = this.make.text({
+                        x: 50,
+                        y: 50,
+                        text: "Score: " + score,
+                        style: {
+                            font: "20px monospace",
+                            fill: "#ffffff"
+                        }
+                    });
+
+                    messageText = this.make.text({
+                       x: this.sys.game.canvas.width / 2,
+                       y: 200,
+                        text: "Ready Set Hike!",
+                        style: {
+                            font: "36px monospace",
+                            fill: "#ffffff"
+                        },
+                        depth: 30
+                    });
+                    messageText.setOrigin(0.5);
+
                     var bush_1 = this.add.image(70, 400, 'bush');
                     bush_1.setDepth(10);
 
@@ -51,23 +94,41 @@
                     var bush_3 = this.add.image(400, 450, 'bush');
                     bush_3.setDepth(15);
 
-                    goodTarget = this.physics.add.sprite(70, 320, 'boy');
+                    goodTarget = this.physics.add.sprite(-1000, -1000, 'boy');
                     goodTarget.setDisplaySize(100, 300);
+                    goodTarget.setSize(140, 200);
+                    goodTarget.setOffset(100, 100);
                     goodTarget.setDepth(7);
+                    goodTarget.canPopIn = false;
+                    goodTarget.canPopOut = false;
+                    goodTarget.isIn = false;
+                    goodTarget.defaultWidth = 300;
+                    goodTarget.defaultHeight = 100;
 
-                    badTarget = this.physics.add.sprite(400, 350, 'girl');
+
+                    badTarget = this.physics.add.sprite(-1000, -1000, 'girl');
                     badTarget.setDisplaySize(200, 300);
-                    badTarget.setDepth(13);
+                    badTarget.setSize(150, 260);
+                    badTarget.setOffset(210, 280);
+                    badTarget.setDepth(7);
+                    badTarget.canPopIn = false;
+                    badTarget.canPopOut = false;
+                    badTarget.isIn = false;
+                    badTarget.defaultWidth = 300;
+                    badTarget.defaultHeight = 200;
 
                     football = this.physics.add.sprite(400, 600, 'football');
                     football.setDisplaySize(72, 72);
                     football.setRotation(2.35);
+                    football.setSize(300, 400);
+                    football.setOffset(110, 0);
                     football.setDepth(20);
                     //football.setDragY(100);
 
                     crosshairs = this.physics.add.sprite(400, 550, 'crosshairs');
                     crosshairs.setDisplaySize(32, 32);
                     crosshairs.setSize(50, 50);
+                    crosshairs.setOffset(300, 275);
                     crosshairs.setDepth(25);
                     crosshairs.setVisible(false);
 
@@ -80,13 +141,37 @@
                     }, this);
 
                     spacebar = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.SPACE);
+                    zKey = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.Z);
 
-                    var collider = this.physics.add.overlap(football, crosshairs, function (footballOnTarget) {
+                    var footballCrosshairCollider = this.physics.add.overlap(football, crosshairs, function (footballOnTarget) {
                         console.log("landed");
                         crosshairs.setVisible(false);
                         footballOnTarget.body.stop();
 
                         //Check for hit / Miss
+                        if (hasHitBadTarget) {
+                            console.log("Hit Bad Target!");
+                            score -= 50;
+                            messageText.setColor("#ff0000");
+                            messageText.setText("OH MY NOSE!");
+                        } else if(hasHitGoodTarget) {
+                            console.log("Hit Good Target!");
+                            score += 20;
+                            messageText.setColor("#00ff00");
+                            messageText.setText("GOOD!");
+                        }  else {
+                            console.log("Missed!");
+                            messageText.setColor("#ffff00");
+                            messageText.setText("MISS!");
+                            score -= 5;
+                        }
+
+                        if(score < 0) {
+                            score = 0;
+                        }
+
+                        scoreText.setText("Score: " + score);
+
                         // Handle Scoring
                         //Reset
                         football.setY(600);
@@ -100,6 +185,23 @@
 
                     }, null, this);
 
+                    var footballBadTargetCollider = this.physics.add.overlap(football, badTarget, function (footballOnTarget) {
+                        hasHitBadTarget = true;
+                    }, null, this);
+
+                    var footballGoodTargetCollider = this.physics.add.overlap(football, goodTarget, function (footballOnTarget) {
+                        hasHitGoodTarget = true;
+                    }, null, this);
+
+                    popInEmitter = new Phaser.Events.EventEmitter();
+                    popInEmitter.on('popInTarget', this.popInTargetHandler, this);
+                    popInEmitter.on('popOutTarget', this.popOutTargetHandler, this);
+                    popInEmitter.on('popOutTargetCompleted', this.popOutTargetCompletedHandler, this);
+
+                    startGoodTargetTimedEvent = this.time.addEvent({ delay: Phaser.Math.Between(2000,5000), callback: this.randomizeTarget, callbackScope: this, args: [goodTarget], loop: false });
+                    startBadTargetTimedEvent = this.time.addEvent({ delay: Phaser.Math.Between(500,3000), callback: this.randomizeTarget, callbackScope: this, args: [badTarget], loop: false });
+
+
                 },
 
 
@@ -110,7 +212,9 @@
                         console.log("set");
                         this.input.off('pointermove');
                         crosshairs.setVisible(true);
-                        crosshairs.body.setVelocityY(-100);
+                        crosshairs.body.setVelocityY(-150);
+                        hasHitGoodTarget = false;
+                        hasHitBadTarget = false;
                         //football.body.setVelocityY(-100);
                         //this.physics.moveToObject(football, block, 200);
                     }
@@ -120,6 +224,101 @@
                         crosshairs.body.stop();
                         this.physics.moveToObject(football, crosshairs, 300);
                     }
+
+                    if (Phaser.Input.Keyboard.JustDown(zKey)) {
+                        //console.log("Randomize!");
+                        this.randomizeTarget();
+                    }
+
+                    // Random behavior of targets
+                    if(goodTarget.canPopIn) {
+                        var newSize = goodTarget.displayWidth + 20;
+
+                        if(newSize >= 100) {
+                            newSize = 100;
+                            goodTarget.canPopIn = false;
+                            this.time.addEvent({ delay: Phaser.Math.Between(1000,5000), callback: this.randomizeTarget, callbackScope: this, args: [goodTarget], loop: false });
+                        }
+
+                        goodTarget.setDisplaySize(newSize, 300);
+                    }
+
+                    if(goodTarget.canPopOut) {
+                        var newSize = goodTarget.displayWidth - 20;
+
+                        if(newSize < 0) {
+                            newSize = 0;
+                            goodTarget.canPopOut = false;
+                            popInEmitter.emit('popOutTargetCompleted', goodTarget);
+                        }
+
+                        goodTarget.setDisplaySize(newSize, 300);
+                    }
+
+                    if(badTarget.canPopIn) {
+                        var newSize = badTarget.displayWidth + 40;
+
+                        if(newSize >= 200) {
+                            newSize = 200;
+                            badTarget.canPopIn = false;
+                            this.time.addEvent({ delay: Phaser.Math.Between(500,3000), callback: this.randomizeTarget, callbackScope: this, args: [badTarget], loop: false });
+                        }
+
+                        badTarget.setDisplaySize(newSize, 300);
+                    }
+
+                    if(badTarget.canPopOut) {
+                        var newSize = badTarget.displayWidth - 40;
+
+                        if(newSize < 0) {
+                            newSize = 0;
+                            badTarget.canPopOut = false;
+                            popInEmitter.emit('popOutTargetCompleted', badTarget);
+                        }
+
+                        badTarget.setDisplaySize(newSize, 300);
+                    }
+                },
+
+                randomizeTarget: function(target) {
+                    console.log("randomizeTarget()");
+
+                    if(goodTarget.isIn) {
+                        popInEmitter.emit('popOutTarget', target);
+                    } else {
+                        // Randomize Postion
+                        var randomPosition = Phaser.Math.RND.integerInRange(0, 2);
+                        var position = goodTargetPositions[randomPosition];
+
+
+                        // Pop in target
+                        popInEmitter.emit('popInTarget', target, position.x, position.y);
+                        // Wait for either a hit or random timed display
+                        // Pop out target / reset it
+                    }
+                },
+
+                popInTargetHandler: function(target, x, y) {
+                    console.log("popInTargetHandler()");
+                    //goodTarget.setDisplaySize(100, 300);
+                    target.setDisplaySize(0, target.defaultWidth);
+                    target.setX(x);
+                    target.setY(y);
+                    target.canPopIn = true;
+                    target.isIn = true;
+                },
+
+                popOutTargetHandler: function(target) {
+                    console.log("popInTargetHandler()");
+                    target.canPopOut = true;
+                },
+
+                popOutTargetCompletedHandler: function(target) {
+                    target.setX(-1000);
+                    target.setY(-1000);
+                    target.isIn = false;
+
+                    this.time.addEvent({ delay: Phaser.Math.Between(1000,5000), callback: this.randomizeTarget, callbackScope: this, args: [target], loop: false });
                 }
 
             });
@@ -137,7 +336,7 @@
                 physics: {
                     default: 'arcade',
                     arcade: {
-                        debug: true
+                        debug: false
                     }
                 }
             };
